# mainichi-eigo-diary

./: CLAUDE.md  Cargo.toml  Makefile  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml  deploy.yml
docs/: 01_layout.md  02_proofread_system.md  03_versioning_policy.md
src/: app.rs  index.html  main.rs  model.rs  portability.rs  proofread.rs  storage.rs  styles.css  util.rs  web_llm.js  web_llm.rs
src/components/: editor.rs  entry_list.rs  mod.rs
